--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "14.1.0",
+    "next": "^14.1.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "framer-motion": "^10.16.4"
   }
 }
+
